Fix: remove overflow-x:hidden from modal-body to prevent truncation of dropdowns

--- a/htdocs/css/mympd.css
+++ b/htdocs/css/mympd.css
@@ -489,10 +489,6 @@ caption {
   animation-iteration-count: infinite;
 }
 
-.modal-body {
-  overflow-x: hidden;
-}
-
 .modal-body .album-cover {
   float:none;
 }
